--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
   / node_modules
   /.pnp
     .pnp.js
+  / semantic / dist
 
 # testing
   / coverage
@@ -19,5 +21,6 @@
   .env.production.local
 
 npm - debug.log *
-yarn - debug.log *
-yarn - error.log *
+  yarn - debug.log *
+  yarn - error.log *
+  /.idea/
