--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "2.1.2",
     "recompose": "0.30.0",
     "redux": "4.0.1",
+    "redux-devtools-extension": "2.13.8",
     "redux-firestore": "latest",
     "redux-form": "7.4.2",
     "redux-logger": "3.0.6",
